20090503:
	* preload
	* export to xml
	* import from xml
20090729:
	* permit_base: org -> org_list
	* Date - ru
	* Qualification: add - vertical
	* License: Add/Del
	* Insurance: Add/Del
	* Permision: "select/deselect all", Select MegaAll
20090803:
	* Publication
20090825:
	* "Email, сайты - не сразу отображается при добавлении:" - сразу
	* "Допуски: даты не понимает" - понимает
	* "Рег №" => "Реестровый номер"
	* "Дата регистрации в СРО" => "Дата членства в НП"
	* "Дата оплаты взноса" => "Дата оплаты взноса в КФ"
	* Страховка: № свидетельства => № Договора
	* "Юрадрес": шире
	* "Физадрес": шире
	* + "Дата оплаты ВВ"
	* + "Страховка.Срок страхования с"
	* + "Страховка.Срок страхования по"
	* + Телефон: строка
	* Not implemented:
		* Mandatory: "*"
		* Добавить рейтинг организаций - ???