@@ -27,3 +27,11 @@
 	* Not implemented:
 		* Mandatory: "*"
 		* Добавить рейтинг организаций - ???
+20090902:
+	* КПП - опция
+	* Реестровый номер - опция
+	* Дата членства - опция
+	* Дата оплаты в КФ - опция
+	* Дата оплаты ВВ - опция
+	* + Comments
+	* + Public
